--- a/dzmini/pages/mine_work/mine_work.wxml
+++ b/dzmini/pages/mine_work/mine_work.wxml
@@ -1,38 +1,47 @@
 <import src="../common_temp/audio_player.wxml" />
 <view class='messageList borderShowdow'>
-  <block wx:for="{{datalist}}" wx:for-index="cellIdx" wx:for-item="cellItem" wx:key="{{cellIdx}}" >
+  <block wx:for="{{datalist}}" wx:for-index="cellIdx" wx:for-item="cellItem" wx:key="{{cellIdx}}">
     <view class='classCell' id="{{cellIdx}}" bindtap='cellClick'>
-    <image class='class-cell-avatar' src='{{userAvatar}}{{cellItem.authorid}}'></image>
+      <image class='class-cell-avatar' src='{{userAvatar}}{{cellItem.authorid}}'></image>
 
       <view class='class-cell-contentView'>
         <view class='username'>
           {{cellItem.nickname?cellItem.nickname:cellItem.author}}
         </view>
-        <view class='message'>{{cellItem.subject}}</view>
+        <view class='message'>{{cellItem.subject}}
+          <block wx:if="{{cellItem.displayorder == -1}}">
+            <text class="t-status">(回收站)</text>
+          </block>
+          <block wx:if="{{cellItem.displayorder == -2}}">
+            <text class="t-status">(审核中)</text>
+          </block>
+        </view>
 
         <view class='attachementView' wx:if="{{cellItem.attachments.length > 0}}">
 
-        <block wx:for="{{cellItem.imageA}}" wx:for-index="imageidx" wx:for-item="attItem" wx:key="{{attItem.aid}}">
-          <image class='attachement' src="{{attItem.attachurl}}" id="{{imageidx}}" data-cellindex="{{cellIdx}}" catchtap="lookImage" wx:if="{{(cellItem.videoA && imageidx < 8) || (!cellItem.videoA && imageidx < 9)}}"></image>
-        </block>
-        <block wx:for="{{cellItem.videoA}}" wx:for-index="aidx" wx:for-item="video" wx:key="{{video.aid}}">
-          <image catchtap='clickVideo' id="{{video.attachurl}}" class='attachement' src='{{minImgDoc}}videoPlace.png'></image>
-        </block>
-
-        <block wx:if="{{cellItem.imageA.length == 0 && cellItem.videoA.length == 0 && cellItem.audioA}}">
-          <block wx:for="{{cellItem.audioA}}" wx:for-index="aid" wx:for-item="audio" wx:key="{{audio.aid}}">
-            <template is="audio_player" data='{{...audio.toolUse,minImgDoc}}' />
+          <block wx:for="{{cellItem.imageA}}" wx:for-index="imageidx" wx:for-item="attItem" wx:key="{{attItem.aid}}">
+            <image class='attachement' src="{{attItem.attachurl}}" id="{{imageidx}}" data-cellindex="{{cellIdx}}" catchtap="lookImage" wx:if="{{(cellItem.videoA && imageidx < 8) || (!cellItem.videoA && imageidx < 9)}}"></image>
           </block>
-        </block>
+          <block wx:for="{{cellItem.videoA}}" wx:for-index="aidx" wx:for-item="video" wx:key="{{video.aid}}">
+            <image catchtap='clickVideo' id="{{video.attachurl}}" class='attachement' src='{{minImgDoc}}videoPlace.png'></image>
+          </block>
+
+          <block wx:if="{{cellItem.imageA.length == 0 && cellItem.videoA.length == 0 && cellItem.audioA}}">
+            <block wx:for="{{cellItem.audioA}}" wx:for-index="aid" wx:for-item="audio" wx:key="{{audio.aid}}">
+              <template is="audio_player" data='{{...audio.toolUse,minImgDoc}}' />
+            </block>
+          </block>
 
         </view>
         <rich-text class='class-cell-time' nodes="{{cellItem.dateline}}"></rich-text>
         <view class='toolRight'>
           <view class='shareHidden borderShowdow' wx:if="{{cellItem.shareshow == 1}}">
-          <button open-type='share'  plain='true' catchtap='listShare'  id='{{cellIdx}}'><image class='shareIcon' src="{{minImgDoc}}workshare.png" ></image>
-          </button>
-          <button  plain='true' catchtap='disVoice' id='{{cellIdx}}'><image class='shareIcon' src="{{minImgDoc}}workvoice.png"></image>
-          </button>
+            <button open-type='share' plain='true' catchtap='listShare' id='{{cellIdx}}'>
+              <image class='shareIcon' src="{{minImgDoc}}workshare.png"></image>
+            </button>
+            <button plain='true' catchtap='disVoice' id='{{cellIdx}}'>
+              <image class='shareIcon' src="{{minImgDoc}}workvoice.png"></image>
+            </button>
           </view>
           <image src='' class='discIcon' src="{{minImgDoc}}cpostmessage.png" catchtap='discClick' data-tid='{{cellItem.tid}}' id="{{cellIdx}}"></image>
         </view>
@@ -50,10 +59,5 @@
 <view class='noMoreView' hidden="{{!noMore}}">
   别再用力了，你已经滑到底啦
 </view>
-<video id='myVideo'
-autoplay='{{true}}'
-        bindplay="playVideo"
-        bindfullscreenchange="fullScreenChange"
-        bind
-        src="{{currentVideo}}">
-         </video>
+<video id='myVideo' autoplay='{{true}}' bindplay="playVideo" bindfullscreenchange="fullScreenChange" bind src="{{currentVideo}}">
+</video>
