--- a/dzmini/pages/forumdisplay/forumdisplay.wxss
+++ b/dzmini/pages/forumdisplay/forumdisplay.wxss
@@ -1,22 +1,23 @@
 /* pages/forumdisplay/forumdisplay.wxss */
+
 page {
   background-color: #f8f8f8;
 }
 
-view,input,textarea,image,text,button,scroll-view{
+view, input, textarea, image, text, button, scroll-view {
   box-sizing: border-box;
 }
 
 .borderShowdow {
-  box-shadow:0 0 15rpx 2rpx rgba(0,0,0,0.1);
+  box-shadow: 0 0 15rpx 2rpx rgba(0, 0, 0, 0.1);
 }
 
 .classInfoBg {
   background-color: white;
   border-radius: 15rpx;
-  word-break:break-all;
-  margin:5rpx 30rpx;
-  padding:30rpx 0;
+  word-break: break-all;
+  margin: 5rpx 30rpx;
+  padding: 30rpx 0;
 }
 
 .easyTalkDesc {
@@ -25,23 +26,25 @@ view,input,textarea,image,text,button,scroll-view{
   justify-content: space-between;
   align-items: center;
 }
+
 .attachementView {
   display: flex;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
 
 .singleVideo {
-  display:flex;
+  display: flex;
   width: 80%;
-  justify-content:center;
-  background-color:#444444;
-  height:243rpx;
-  align-items:center;
-  padding-bottom:20rpx;
+  justify-content: center;
+  background-color: #444;
+  height: 243rpx;
+  align-items: center;
+  padding-bottom: 20rpx;
   margin-top: 20rpx;
 }
+
 .class-numberItem {
-  width: 300rpx;
+  width: 230rpx;
 }
 
 .class-number {
@@ -50,57 +53,73 @@ view,input,textarea,image,text,button,scroll-view{
 }
 
 .class-numberItem-name {
-  margin-top:10rpx;
+  margin-top: 10rpx;
   font-size: 28rpx;
-  color: #666666;
+  color: #666;
+}
+
+.forum-desc {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  margin-top: 20rpx;
+  padding: 0 20rpx;
+  font-size: 28rpx;
+  color: #666;
 }
 
 .easyTalkNav {
-  display:flex;
-  justify-content:space-between;
-  padding:0rpx 30rpx 0rpx;
-  border-bottom:1rpx solid #dcdcdc;
-  margin:0 30rpx;
+  display: flex;
+  justify-content: space-between;
+  padding: 0rpx 30rpx 0rpx;
+  border-bottom: 1rpx solid #dcdcdc;
+  margin: 0 30rpx;
   font-size: 32rpx;
 }
 
 .easyTalkNavItem {
-  color: #555555;
+  color: #555;
   padding: 0 8rpx;
-  line-height:3;
+  line-height: 3;
 }
 
 .easyTalkActive {
   color: #5abf39;
-  border-bottom:5rpx solid #5abf39;
+  border-bottom: 5rpx solid #5abf39;
 }
 
-.show{
-   display:show;
+.show {
+  display: show;
 }
-.hide{
-   display:none;
+
+.hide {
+  display: none;
 }
+
 .easyTop {
   margin: 30rpx 30rpx;
   border-bottom: 1rpx solid #e0e0e0;
   line-height: 1.8;
   padding-bottom: 15rpx;
-  display:-webkit-box;
-  text-overflow:ellipsis;
-  -webkit-line-clamp:2;
-  -webkit-box-orient:vertical;
-  overflow:hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
+
 .easyTop text {
-  color:  #ff0000;
-  border: 1rpx solid #ff0000;
+  color: #f00;
+  border: 1rpx solid #f00;
   font-size: 22rpx;
   margin-right: 15rpx;
   padding: 0 5rpx;
 }
+
 .easyTopCell {
-  color: #333333;
+  color: #333;
   font-size: 30rpx;
   overflow: hidden;
 }
@@ -115,15 +134,15 @@ view,input,textarea,image,text,button,scroll-view{
 .classCell {
   display: flex;
   margin: 0 24rpx;
-  border-bottom: 1px solid #e1e1e1c0; 
+  border-bottom: 1px solid #e1e1e1c0;
 }
 
 .class-cell-avatar {
   width: 80rpx;
   height: 80rpx;
   margin: 20rpx 0;
-  border-radius:8rpx;
-  border:1rpx solid #E1E1E1;
+  border-radius: 8rpx;
+  border: 1rpx solid #e1e1e1;
 }
 
 .class-cell-contentView {
@@ -141,30 +160,34 @@ view,input,textarea,image,text,button,scroll-view{
 .message {
   font-size: 30rpx;
   color: #353535;
-  margin-top:10rpx;
+  margin-top: 10rpx;
   word-break: break-all;
+  display: flex;
+  align-items: center;
 }
 
 .attachement {
   width: 155rpx;
   height: 155rpx;
-  margin-top:20rpx;
+  margin-top: 20rpx;
   margin-right: 15rpx;
 }
 
 .class-cell-time {
-  width:200rpx;
-  float:left;
-  font-size:22rpx;
-  line-height:60rpx;
-  color:#888888;
+  width: 200rpx;
+  float: left;
+  font-size: 22rpx;
+  line-height: 60rpx;
+  color: #888;
 }
-.toolRight button{
+
+.toolRight button {
   padding: 0rpx;
   border: none;
   width: 115rpx;
   height: 70rpx;
 }
+
 .toolRight {
   margin-bottom: 10rpx;
   width: 290rpx;
@@ -173,17 +196,18 @@ view,input,textarea,image,text,button,scroll-view{
   display: flex;
   justify-content: flex-end;
 }
+
 .shareHidden {
   display: flex;
   width: 238rpx;
   border-radius: 8rpx;
   margin-right: 10rpx;
 }
+
 .shareIcon {
   width: 100rpx;
   height: 50rpx;
 }
-
 
 .singleAtt {
   width: 80%;
@@ -196,6 +220,7 @@ view,input,textarea,image,text,button,scroll-view{
   display: none;
 }
 @import "../common_temp/audio_player.wxss";
+
 detailVideo {
   width: 0rpx;
   height: 0rpx;
@@ -203,47 +228,49 @@ detailVideo {
 
 .emptyView {
   font-size: 28rpx;
-  color: #666666;
+  color: #666;
   text-align: center;
-  margin:  50rpx 90rpx;
-
+  margin: 50rpx 90rpx;
 }
+
 .emptyView image {
   display: block;
   width: 349rpx;
   height: 261rpx;
   margin: 300rpx auto 30rpx;
 }
+
 .emptyMsg {
   padding-bottom: 600rpx;
-  width:410rpx;
-  margin:0 auto;
+  width: 410rpx;
+  margin: 0 auto;
 }
 
 .noMoreView {
   text-align: center;
-  color: #999999;
+  color: #999;
   font-size: 24rpx;
   margin-top: 30rpx;
 }
 
-.emptyView text{
+.emptyView text {
   color: #3973db;
 }
 
 /* 发布 */
+
 .postEnter {
-  position:fixed;
-  background-color:#5abf39;
-  width:120rpx;
-  height:120rpx;
-  border-radius:60rpx;
-  bottom:105rpx;
-  right:55rpx;
-  color:white;
-  text-align:center;
-  line-height:120rpx;
-  font:34rpx;
+  position: fixed;
+  background-color: #5abf39;
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 60rpx;
+  bottom: 105rpx;
+  right: 55rpx;
+  color: white;
+  text-align: center;
+  line-height: 120rpx;
+  font: 34rpx;
 }
 
 .special {
@@ -252,6 +279,8 @@ detailVideo {
   text-align: center;
   background-color: #5abf39;
   border-radius: 6rpx;
-  padding: 4rpx 6rpx;
+  padding: 0rpx 6rpx;
   margin-right: 4rpx;
+  height: 30rpx;
+  line-height: 30rpx;
 }
