userinfo传递修改下

--- a/dzmini/pages/mine/mine.wxml
+++ b/dzmini/pages/mine/mine.wxml
@@ -1,4 +1,4 @@
-<view class='l_main'>
+<view class='l_main' wx:if="{{uid}}">
   <view class='mi_top' bindtap="goToModify">
     <view class='fl mi_head'>
       <image mode='aspectFill' src='{{avatar}}'></image>
