--- a/dzmini/pages/login/login.wxml
+++ b/dzmini/pages/login/login.wxml
@@ -1,23 +1,27 @@
 <!--pages/login/login.wxml-->
 <form catchsubmit="formSubmit">
   <view>
-    
+
     <view class="textArea">
       <view class='logo'>论坛管家</view>
       <view class='bottomLine'>
         <input class="weui-input" name="username" bindchange='inputNameChange' value='{{username}}' placeholder="账号" />
       </view>
       <view class='bottomLine'>
-        <input class="weui-input" type="password" name="password" placeholder="密码"/>
+        <input class="weui-input" type="password" name="password" placeholder="密码" />
       </view>
       <view class='bottomLine viewflex' wx:if="{{imageSrc}}">
-        <input class="weui-input" name="seccodeverify" placeholder="验证码"/>
+        <input class="weui-input" name="seccodeverify" placeholder="验证码" />
         <image class='secodeImg' mode='aspectFit' src='{{imageSrc}}' catchtap='downSeccode'></image>
       </view>
       <view class="btnArea">
-        <button type="primary" formType="submit">登录</button>
+        <button type="primary" formType="submit">绑 定</button>
       </view>
+      <view class="register-v">
       <button class='register' open-type="getUserInfo" bindgetuserinfo="getUserInfo" bindtap='toRegister'>注 册</button>
+        <text class="register-tip">还没有论坛账号?立即</text>
+      </view>
+
     </view>
   </view>
 </form>
