--- a/dzmini/pages/login/login.wxss
+++ b/dzmini/pages/login/login.wxss
@@ -1,5 +1,6 @@
 /* pages/login/login.wxss */
-view,input,textarea,image,text,button,scroll-view{
+
+view, input, textarea, image, text, button, scroll-view {
   box-sizing: border-box;
 }
 
@@ -9,6 +10,7 @@ view,input,textarea,image,text,button,scroll-view{
   font-size: 54rpx;
   font-weight: 500;
 }
+
 .textArea {
   padding: 60rpx;
 }
@@ -17,8 +19,7 @@ view,input,textarea,image,text,button,scroll-view{
   height: 80rpx;
   width: 100%;
   margin-top: 15rpx;
-  font-size:28rpx;
-  
+  font-size: 28rpx;
 }
 
 .bottomLine {
@@ -29,17 +30,29 @@ view,input,textarea,image,text,button,scroll-view{
   padding: 30rpx 0;
 }
 
-.register {
-  width: 150rpx;
-  float: right;
-  text-align: right;
-  color:#33aa05;
-  font-size:32rpx;
-  border: none;
-  background: white;
+.register-v {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
 }
 
-button::after{
+.register {
+  text-align: right;
+  color: #33aa05;
+  font-size: 32rpx;
+  font-weight: 500;
+  border: none;
+  background: white;
+  margin: 0;
+  padding: 0 0 0 10rpx;
+}
+
+.register-tip {
+  font-size: 30rpx;
+  color: #888;
+}
+
+button::after {
   border: none;
 }
 
@@ -59,10 +72,12 @@ button::after{
   width: 100rpx;
   height: 100rpx;
 }
+
 .wxLogin image {
   width: 100rpx;
   height: 100rpx;
 }
+
 .viewflex {
   display: flex;
 }
@@ -70,76 +85,81 @@ button::after{
 .secodeImg {
   width: 300rpx;
   height: 70rpx;
-  margin-top:10rpx;
+  margin-top: 10rpx;
 }
 
 /* 获取信息弹窗 */
+
 .shareMask {
   position: fixed;
   top: -0px;
   left: -0px;
   width: 100%;
   height: 905px;
-
-  background-color:#000;background: rgba(0, 0, 0, 0.5);
+  background-color: #000;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 10000;
 }
+
 .shareContain {
-  position:relative;
+  position: relative;
   width: 585rpx;
   height: 810rpx;
   background-color: white;
   border-radius: 10rpx;
-  margin:216rpx auto;
+  margin: 216rpx auto;
   text-align: center;
 }
+
 .shareCover {
   width: 585rpx;
   height: 455rpx;
   margin: 0 auto;
 }
+
 .closeView {
   float: right;
-  top:10rpx;
-  right:10rpx;
-  width:100rpx;
-  height:100rpx;
-  position:absolute;
+  top: 10rpx;
+  right: 10rpx;
+  width: 100rpx;
+  height: 100rpx;
+  position: absolute;
 }
+
 .close {
   width: 48rpx;
   height: 48rpx;
-  margin-left:50rpx;
+  margin-left: 50rpx;
 }
 
 .shareContent {
   font-size: 30rpx;
-  color: #888888;
-  margin:0rpx 40rpx 30rpx;
-  line-height:1.4;
+  color: #888;
+  margin: 0rpx 40rpx 30rpx;
+  line-height: 1.4;
 }
 
 .welcomeContain {
-  position:relative;
+  position: relative;
   width: 585rpx;
   height: 645rpx;
   background-color: white;
   border-radius: 10rpx;
-  margin:216rpx auto;
+  margin: 216rpx auto;
   text-align: center;
 }
 
 .welcomeCover {
   margin: 30rpx 40rpx;
-  width:505rpx;
-  height:378rpx;
-
+  width: 505rpx;
+  height: 378rpx;
 }
 
 .welcomeBtn {
   color: #5abf39;
   background-color: white;
-  height:98rpx;
-  line-height:3;
+  height: 98rpx;
+  line-height: 3;
 }
+
 /* 获取信息弹窗 - end */
