x底部输入框适配

--- a/dzmini/pages/thread_detail/thread_detail.wxml
+++ b/dzmini/pages/thread_detail/thread_detail.wxml
@@ -187,4 +187,5 @@
   <view class='replyAudio' catchtap='replyAudio'></view>
   <view class='replyImage' catchtap='replyImage'></view>
   <view class='replyVideo' catchtap='replyVideo'></view>
+  <view class="toolback"></view>
 </view>
